--- a/package.json
+++ b/package.json
@@ -21,15 +21,22 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/file": "^6.6.0",
+    "@awesome-cordova-plugins/media-capture": "^6.6.0",
+    "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
     "cordova-plugin-camera": "^7.0.0",
+    "cordova-plugin-file": "^8.0.1",
+    "cordova-plugin-media-capture": "^5.0.0",
+    "firebase": "^10.8.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
